--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,18 @@
        { "src": "app.js", "use": "@vercel/node" }
     ],
     "routes": [
-       { "src": "/(.*)", "dest": "/app.js" }
+       { "src": "/(.*)", 
+       "dest": "/app.js",
+       "headers": {
+          "Access-Control-Allow-Origin": "*",
+          "Access-Control-Allow-Headers": "Content-Type, Authorization",
+          "Access-Control-Allow-Methods": "*"
+       },
+       "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
+       
+ 
+       }
+       
     ]
+    
  }
