--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3003
-# DB_CONNECTION = mongodb+srv://oktavvv:oktaulala@cluster0.d3lmr3o.mongodb.net/?retryWrites=true&w=majority
-# SECRET_KEY = "vamos"
+DB_CONNECTION = mongodb+srv://viaaa:Testing101@cluster0.rqfek8e.mongodb.net/?appName=Cluster0
+SECRET_KEY = "vamos"
